--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_native_splash: ^2.4.6
-  freezed_annotation: ^3.0.0
   go_router: ^15.1.3
-  lib: ^0.0.3
   lottie: ^3.3.1
 
+
 dev_dependencies:
-  build_runner: ^2.4.15
-  freezed: ^3.0.6
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
