--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   go_router: ^15.1.3
   lottie: ^3.3.1
-
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_lints: ^5.0.0
